# ermak

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
ermak-py/: Cargo.toml  README.md  pyproject.toml
ermak-py/src/: lib.rs
ermak-py/tests/: test_ermak.py
examples/: bench_throughput.rs  binding_free_energy.rs  crowding_sweep.rs  hi_crowding.rs  hi_pair_mobility.rs  hi_sedimentation.rs  hi_stress.rs  hi_two_sphere.rs  koff_prediction.rs  ligand_escape.rs  pse_sinc_scaling.rs  render_data.rs  vram_budget.rs
scripts/: plot_bench.py  plot_binding.py  plot_crowd.py  plot_crowding.py  plot_escape.py  plot_koff.py  plot_pathways.py  run-bounded.sh
src/: backend.rs  crowding.rs  diffusion.rs  error.rs  gpu.rs  integrator.rs  kinetics.rs  lib.rs  memory.rs  ml.rs  potential.rs  rng.rs  vec3.rs
src/hydro/: ewald.rs  gpu_ewald.rs  gpu_fft.rs  gpu_noise.rs  gpu_pse_wave.rs  gpu_step.rs  mat3.rs  mobility.rs  mod.rs  noise.rs  pse_wave.rs  pse_wave_hasimoto.rs  rpy.rs
