[package]
name = "ermak"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Brownian dynamics of ligand diffusion and binding kinetics in crowded environments"
repository = "https://github.com/alejandro-soto-franco/ermak"
keywords = ["brownian-dynamics", "molecular-dynamics", "biophysics", "simulation", "diffusion"]
categories = ["science", "simulation"]

[features]
# GPU acceleration. Off by default so the crate builds and runs (CPU reference)
# on any machine and in CI without a GPU toolchain.
gpu = []

[dependencies]
rand = "0.8"
rand_distr = "0.4"
rayon = "1.12.0"
